--- a/about.html
+++ b/about.html
@@ -157,20 +157,21 @@
                 <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px ;" src="assets/contact-us.jpg" alt="">
                 <div id="banner-saying">
                     <div id="absolute">
-                        <h1 id="CHAT"> MESSAGE US!</h1>
+                        <div class="row">
+                            <div class="col-md-12 sm text-center  ">
+                              <h5 style="color: white; text-align: -webkit-left;" >Got a question, comment or a collaboration idea? Great, let us hear it 
+                                – we’re <BR> all about community and two-way communication here at Ampli.fy. </h5>
+                            </div>
+                        </div>
+                        <div class="" style="text-align:left">
+                            <a href="contact.html"><button type="submit" class="btn rounded-0 btn-lg btn-outline-light">CONTACT US</button></a>
+                        </div>
                     </div>
+                    </div>
+                    
                 </div>    
             </section>
-            <div class="row">
-                <div class="col-md-12 sm text-center pt-5 ">
-                  <h5 style="font-family: arial; color: white;" >Got a question, comment or a collaboration idea? Great, let us hear it 
-                    – we’re <BR> all about community and two-way communication here at Ampli.fy. </h5>
-                </div>
-            </div>
-            <div class="button pt-5 px-2 py-5" style="text-align-last:center">
-                <button type="button" class="btn btn-dark text-center rounded-0 btn-lg " href="contact.html">CONTACT</button>
-            </div>
-        </div>
+            
         </main>
     <footer>
         <script>
