added multiple functionalities
added sweetalert cdn
added footer.js
added footer and contact email validation
revamped design layout of booking.html from d-flex to grid

--- a/footer.html
+++ b/footer.html
@@ -5,15 +5,17 @@
         <p>Don't miss out on exclusive behind-the-scenes access, early demos, live streams and other benefits by subscribing to our newsletter.</p>
     </div>
     <div class="px-4 pt-md-2">
-        <div class="mb-3 justify-content-sm-center">
-            <div class="ms-sm-5 ms-lg-0">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control rounded-0" id="exampleFormControlInput1" placeholder="Your email address"><br>
-            <button type="submit" class="btn rounded-0 btn-outline-light">Submit</button>
-        </div>
-        </div>
+        <form id="form-footer">
+            <div class="mb-3 justify-content-sm-center">
+                <div class="ms-sm-5 ms-lg-0">
+                    <label for="input-email-footer" class="form-label">Email address</label>
+                    <input type="email" class="form-control rounded-0" id="input-email-footer" placeholder="Your email address"><br>
+                    <button type="submit" class="btn rounded-0 btn-outline-light">Submit</button>
+                </div>
+            </div>
+        </form>
     </div>
-    </div>
+</div>
     <hr>
     <div class="d-flex flex-column flex-sm-row pb-3 px-4 ">
         <div class="d-flex flex-fill pt-md-2 order-2 order-sm-1 justify-content-center justify-content-md-start">
