--- a/about.html
+++ b/about.html
@@ -210,7 +210,8 @@
                     b.style.display = 'none';
                 }
             } 
-        
+            //script for footer email validation
+            $.getScript("js/footer.js");
         </script>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
