--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <!-- navigation -->
@@ -53,6 +54,47 @@
             </div>
         </div>
     </nav>
+    <main class="pt-1">
+        <div id="img-info" class="container">
+            <div class="row ">
+                <div id="info-left" class="col-sm-12 col-md-8 col-lg-5">
+                    <div class="pt-5 pb-3 mt-5 mb-3"><h1> Say Hello <br> to the Developers! </h1></div>
+                    <div class="text-align-left pt-1 pb-3 mb-1"> 
+                        If you are visiting Bonifacio Global City. You can find us at W5th Building Taguig City.
+                </div>
+                    <form id="contact-form">
+                        <div class="d-flex flex-column mb-3">
+                            <label for="input-name" class="form-label">Name*</label>
+                            <input type="text" class="form-control rounded-0" id="input-name" placeholder="Your name" required >
+                        </div>
+                        <div class="d-flex flex-column mb-3">
+                            <label for="input-lname" class="form-label">Last Name*</label>
+                            <input type="text" class="form-control rounded-0" id="input-lname" placeholder="Your last name" required>
+                        </div>
+                        <div class="d-flex flex-column mb-3">
+                            <label for="input-email" class="form-label">Email*</label>
+                            <input type="email" class="form-control rounded-0" id="input-email" placeholder="Your email address" required>
+                        </div>
+                        <div class="dflex flex-column mb-3 pb-1">
+                            <label class="mb-2" for="text-area">Message</label>
+                            <textarea class="form-control rounded-0" placeholder="Enter your message" id="text-area"></textarea>
+                        </div>
+                        <button id="submit-button" class="mb-5 pb-1 btn btn-primary btn-dark rounded-0 btn-lg" type="submit">
+                            SUBMIT
+                        </button>
+                    </form>
+                </div>
+                <div class="col-lg-1">
+                    <!-- spacer -->
+                </div>
+                <div id="img-right" class="d-flex col-sm-12 col-md-12 col-lg-6  ">
+                    <div class="container p-0 d-flex justify-content-center align-items-center">
+                        <img class="image-fluid w-100" src="assets/arif-riyanto-vJP-wZ6hGBg-unsplash.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <!-- footer -->
     <footer>
         <script>
@@ -61,6 +103,27 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+    </script>
+    <script>
+        $(document).ready(function(){
+            //contact form with email validation
+            $("#contact-form").submit(function(e){
+                e.preventDefault();
+                Swal.fire({
+                    icon:'success',
+                    title:'Message Sent',
+                    text:'Subscribe to our newsletter for more backstage news',
+                });
+                //clear form
+                $("#input-name").val("");
+                $("#input-lname").val("");
+                $("#input-email").val("");
+                $("#text-area").val("");
+            });
+
+            //script for footer email validation
+            $.getScript("js/footer.js");
+        });
     </script>
 </body>
 </html>
