--- a/about.html
+++ b/about.html
@@ -157,8 +157,8 @@
                 <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px ;" src="assets/contact-us.jpg" alt="">
                 <div id="banner-saying">
                     <div id="absolute">
-                        <div class="row">
-                            <div class="col-md-12 sm text-center  ">
+                        <div class="row col-lg-12">
+                            <div class="col-md-12 col-lg-12 sm text-center  ">
                               <h5 style="color: white; text-align: -webkit-left;" >Got a question, comment or a collaboration idea? Great, let us hear it 
                                 – we’re <BR> all about community and two-way communication here at Ampli.fy. </h5>
                             </div>
@@ -180,12 +180,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-    </script>
-    <script>
-        $(document).ready(function(){
-            //script for footer email validation
-            $.getScript("js/footer.js");
-        });
     </script>
 </body>
 </html>
