--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
@@ -97,7 +94,7 @@
                 <h2>OPM BANDS</h2>
             </div> 
             <div class="col-lg-5 p-4 ctnText slidingLeft animate__animated">
-                <div class="ctnBands animate__animated"> 
+                <div class="ctnBands"> 
                     <img src="assets/BenAndBen.jpg" class="img-fluid w-100 d-none d-lg-block bandsImage" alt="Ben & Ben">
                     <img src="assets/BenAndBen2.jpg" class="img-fluid w-100 d-lg-none bandsImage" alt="Ben & Ben">
                     <h3 class="pt-4">BEN & BEN</h3>
@@ -107,7 +104,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-lg-7 pt-lg-5 mt-lg-5 p-4 ctnText slidingRight animate__animated">
                 <h2 class="d-none d-lg-block">OPM BANDS</h2>
                 <div class="ctnBands animate__animated">
@@ -120,7 +116,7 @@
                 </div>
             </div>
             <div class="col-lg-7 p-4 pt-lg-5 mt-lg-5 ctnText slidingLeft animate__animated">
-                <div class="ctnBands animate__animated">
+                <div class="ctnBands">
                     <img src="assets/silent_sanctuary.jpg" class="img-fluid bandsImage bandsImage" alt="">
                     <h3 class="pt-4">SILENT SANCTUARY</h3>
                     <p>A rock band that includes violins and a cello. Most people have had mixed reactions to this mixture; some are amazed, some are skeptical, and some are simply curious.</p>
@@ -130,7 +126,7 @@
                 </div>
             </div>
             <div class="col-lg-5 p-4 ctnText slidingRight animate__animated">
-                <div class="ctnBands animate__animated"> 
+                <div class="ctnBands"> 
                     <img src="assets/IVspades2.jpg" class="img-fluid w-100 d-none d-lg-block bandsImage" alt="">
                     <img src="assets/sample.jpg" class="img-fluid w-100 d-lg-none bandsImage" alt="">
                     <h3 class="pt-4">IV OF SPADES</h3>
@@ -147,7 +143,7 @@
         <a href="reserve.html" style="color: white; text-decoration: none;">
             <div style="position: relative;" class="homeBanner">
                 <img src="assets/coverbanner.jpg" class="img-fluid w-100" style="min-height: 584px; max-height: 585px;" alt="">
-                <div class="ps-5 showBanner bannerText">
+                <div class="ps-5 showBanner bannerText animate__animated">
                     <span><h1><span style="font-size: 6vw; font-weight: 900;">Tickets are now Available!</span></h1></span>
                     <span><h1><span style="font-size: 6vw; font-weight: 900;">BEN</span><span> & </span><span style="font-size: 6vw; font-weight: 900;">BEN</span></h1></span><br>
                     <span style="font-size: 2vw;">2022 &#9679; MARCH-JUNE &#9679; PHILIPPINES</span>
@@ -167,28 +163,28 @@
                 <div>
                     <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates: </h2></span></div>
                     <div class="d-flex flex-column flex-md-row me-lg-5 py-4 justify-content-sm-between" id="band-sched" band-name="Ben & Ben">
-                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">3.25</b></h3></div>
+                        <div><h3>3.25</b></h3></div>
                         <div class="px-md-2 px-lg-5 ">
                             <div><h4 class="country">Edinbro</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
-                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">4.01</h3></div>
+                        <div><h3>4.01</h3></div>
                         <div class="px-md-2 px-lg-5">
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
-                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">5.30</h3></div>
+                        <div><h3>5.30</h3></div>
                         <div class="px-md-2 px-lg-5">
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
-                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">6.20</h3></div>
+                        <div><h3>6.20</h3></div>
                         <div class="px-md-2 px-lg-5">
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
@@ -202,7 +198,7 @@
     <div class="container-fluid p-0 pt-5 pb-1 d-none d-lg-block">
         <div style="position: relative;" class="homeBanner">
             <img src="assets/test.jpg" class="img-fluid w-100" style="min-height: 584px; max-height: 585px;" alt="">
-            <div class="ps-5 showBanner bannerText" style="top: 300px;">
+            <div class="ps-5 showBanner bannerText animate__animated" style="top: 300px;">
                 <span><h1><span style="font-size: 6vw; font-weight: 900;">HEAR THE CROWD!</span></h1></span>
                 <p class="text-justify">If you have any questions or comments, please email us or call 123-456-7890.<br> We would be delighted to answer your questions and arrange a meeting with you.<br> Ampli.fy music can help you stand out from the crowd!</p>
                 <button type="button" class="btn btn-light text-center rounded-0 btn-lg">CONTACT</button>
@@ -237,36 +233,36 @@
                         $('.progressBar').attr('aria-valuenow','0').css('width','0%');
                 });
             });
-            let observer = new IntersectionObserver(entries => {
-                entries.forEach(entry => {
-                    let moveObject = entry.target.querySelector('.ctnBands');
-                    
-                    if (entry.isIntersecting) {
-                    moveObject.classList.add('animate__slideInLeft');
-                    return;
-                    }
-                    moveObject.classList.remove('animate__slideInLeft');
+            $.fn.isInViewport = function () {
+                let elementTop = $(this).offset().top;
+                let elementBottom = elementTop + $(this).outerHeight();
+
+                let viewportTop = $(window).scrollTop();
+                let viewportBottom = viewportTop + $(window).height();
+
+                return elementBottom > viewportTop && elementTop < viewportBottom;
+            };
+
+            $(window).scroll(function () {
+                //fade in left and right
+                $(".slidingLeft, .slidingRight, .bannerText").each(function(){
+                    if ($(this).isInViewport()){
+                        var class_name = $(this)[0].className;
+                        if(class_name.includes("slidingLeft")){
+                            $(this).addClass('fadein-left');
+                        }
+                        else if(class_name.includes("slidingRight")){
+                            $(this).addClass("fadein-right");
+                        }
+                        else if(class_name.includes("bannerText")){
+                            $(this).addClass("animate__fadeInLeft");
+                        }
+                    } 
                 });
             });
-            observer.observe(document.querySelector('.slidingLeft'));
-            
          //script for footer email validation
          $.getScript("js/footer.js");
         });
-        // let listBands = document.querySelectorAll(".slidingLeft");
-        //     let observer =  new IntersectionObserver(entries =>{
-        //         entries.forEach(entry => {
-        //             entry.target.classList.add('animate__slideInLeft', entry.isIntersecting);
-        //             if(entry.isIntersecting){
-        //                 observer.unobserve(entry.target);
-        //             }  
-        //         });
-        //     },{
-        //         threshold: 0.5,
-        //     });
-        //     listBands.forEach(slidingLeft => {
-        //         observer.observe(slidingLeft);                
-        //     });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
