Applied suggestions made by sir
All caps buttons
spacing between sweet alert button
changed buy now to reserve
changed purchase to reserve

--- a/booking.html
+++ b/booking.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="my-4"> 
-                        <button class="btn btn-dark btn-lg rounded-0 btn-purchase" >Purchase Now</button>
+                        <button class="btn btn-dark btn-lg rounded-0 btn-purchase" >RESERVE NOW</button>
                     </div>
                 </div>
             </div>
@@ -184,8 +184,8 @@
                 var temp= "You want to purchase a <b>"+list.band_name+"</b> ticket that will be on <b>"+ date +"</b> for <b>₱" + getAdmissionPrice($("#admission").attr("admission_val"))+"</b>";
                 const swalWithBootstrapButtons = Swal.mixin({
                     customClass: {
-                        confirmButton: 'btn btn-success',
-                        cancelButton: 'btn btn-danger'
+                        confirmButton: 'btn btn-success mx-2',
+                        cancelButton: 'btn btn-danger mx-2'
                     },
                     buttonsStyling: false
                     })
