--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
         <div id="img-info" class="container">
             <div class="row ">
                 <div id="info-left" class="col-sm-12 col-md-8 col-lg-5">
-                    <div class="pt-5 pb-3 mt-5 mb-3"><h1> Say Hello <br> to the Developers! </h1></div>
+                    <div class="pt-5 pb-3 mt-5 mb-3"><h1> Say Hello to Ampli.fy </h1></div>
                     <div class="text-align-left pt-1 pb-3 mb-1"> 
-                        If you are visiting Bonifacio Global City. You can find us at W5th Building Taguig City.
-                </div>
+                        Our team needs to hear your voices. Feel free to message us about your questions and reactions.
+                    </div>
                     <form id="contact-form">
                         <div class="d-flex flex-column mb-3">
                             <label for="input-name" class="form-label">Name*</label>
