--- a/reserve.html
+++ b/reserve.html
@@ -82,7 +82,7 @@
                             <div><h4 class="country">Edinbro</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales">BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3 class="datemd">4.01</h3></div>
@@ -90,7 +90,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
                         <div><h3 class="datemd">5.30</h3></div>
@@ -98,7 +98,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3 class="datemd">6.20</h3></div>
@@ -106,7 +106,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                             <div><h4 class="country">Edinbro</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales">BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3 class="datemd">4.01</h3></div>
@@ -136,7 +136,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
                         <div><h3 class="datemd">5.30</h3></div>
@@ -144,7 +144,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3 class="datemd">6.20</h3></div>
@@ -152,7 +152,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                             <div><h4 class="country">Edinbro</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales">BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3 class="datemd">4.01</h3></div>
@@ -182,7 +182,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
                         <div><h3 class="datemd">5.30</h3></div>
@@ -190,7 +190,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3 class="datemd">6.20</h3></div>
@@ -198,7 +198,7 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales">RESERVE</button>
                     </div>
                 </div>
             </div>
