--- a/bands.html
+++ b/bands.html
@@ -58,16 +58,15 @@
     </nav>
    <!--end navigation-->
    <!--banner-->
-   <div  id="reserve" class="container-fluid px-0 pb-5 w-100">
+   <section  id="reserve" class="container-fluid px-0 w-100">
     <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="assets/banner.jpg" alt="">
     <div id="banner-saying">
         <div id="absolute">
-            <span><h1><span class="bigus">Music </span><span class="bigus">that</span> </h1></span>
-                    <span><h1><span class="bigus">Listens </span><span class="bigus">to you</span></h1></span><br>
-           
+            <span><h1><span class="bigus">MUSIC</span> that <span class="bigus"> LISTENS</span></h1></span>
+            <span><h1>to <span class="bigus">YOU</span></h1></span>
         </div>
     </div>    
-</div>
+</section>
     <!--end banner-->
     
     <div class="p-4 pt-5 pb-lg-5 d-lg-5 text-center ctnText">
